--- a/src/app/navbar/user-login-navbar/user-login-navbar.component.html
+++ b/src/app/navbar/user-login-navbar/user-login-navbar.component.html
@@ -1,13 +1,14 @@
-<div class="ui fixed inverted navbar menu">
+<div class="ui small fixed inverted navbar menu">
     <div class="ui text container">
       <div href="#" class="header item">
         <img class="logo" src="assets/images/logo.png"> Repair Service
       </div>
 
       <div class="ui right floated item">
-        <button class="ui blue button" (click)="login()" id="mon3">Login
-            <!--<app-user-login-modal> </app-user-login-modal>-->
-            </button>
+        <button class="ui facebook button" (click)="login()">
+          <i class="facebook icon"></i>
+          Facebook Login
+        </button>
       </div>
     </div>
   </div>
