--- a/src/app/user/user-search-card/user-search-card.component.html
+++ b/src/app/user/user-search-card/user-search-card.component.html
@@ -98,7 +98,7 @@
 
   <div class="actions">
 
-    <div class="ui green ok inverted button" id="mon3">
+    <div class="ui green ok inverted button" id="mon3" (click)="closeModal()">
       <i class="checkmark icon"></i> Okay
     </div>
   </div>
