--- a/src/app/service-provider/sp-homepage/sp-homepage.component.html
+++ b/src/app/service-provider/sp-homepage/sp-homepage.component.html
@@ -51,81 +51,110 @@
     </div>
 </div>
 
-<!--<div class="segment spsegment">-->
 <div class="spinner" *ngIf="loading">
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div>
-       
+
 <div *ngIf="!loading">
+  <div *ngIf = "appointments">
+    <!--<div class="ui page stackable two column grid">
+      <div class="sixteen wide column" >-->
 
-<!--<div class="ui vertical feature segment">-->
-<div *ngIf="appointments">
-    <div class="ui page stackable two column grid ">
-        <div class="column" *ngFor="let appointment of appointments">
-                <div class="ui raised segment">
-                    <span *ngIf="appointment.emergency == 'yes'">
-                        <a class="ui red ribbon label" >emergency</a>
-                    </span>
-                    
-                    <div class="content">
-                    <img class="right floated ui mini image" src="{{appointment.imgurl}}">
-                    <div class="header" id="mon3">
-                        <span>{{appointment.username}}</span>
-                        <span style="margin-right:10px; margin-bottom: 10px;" class="ui medium right floated olive tag label">{{appointment.time}}</span>
-                        <span style="margin-right:10px; margin-bottom: 10px;" class="ui medium right floated olive tag label">{{appointment.date}}</span>
-                    </div>
-                    <!--<div class="meta">
-                        Friends of Veronika
-                    </div>-->
-                    <div class="description">
-                        <table class="ui small definition unstackable table">
-                            <tr>
-                                <td class="active" id="mon3"><b>Phone Number</b></td>
-                                <td id="mon3">{{appointment.userPh}}</td>
-                            </tr>
+        <div class="ui centered grid">
+        <div class="four column row">
+          <div class="fourteen wide column">
+        <div class="ui stackable two cards">
+          <div class="card" *ngFor="let item of appointments" [ngClass]="{disabled : item.unavailable == 'true'}">
+          
+          <div class="content">
 
-                            <tr>
-                                <td class="active" id="mon3"><b>Device</b></td>
-                                <td id="mon3">{{appointment.device}}</td>
-                            </tr>
-
-                            <tr>
-                                <td class="active" id="mon3"s><b>Address</b></td>
-                                <td id="mon3">{{appointment.userAddress}}</td>
-                            </tr>
-
-                            <tr>
-                                <td class="active" id="mon3"><b>Description</b></td>
-                                <td id="mon3">{{appointment.description}}</td>
-                            </tr>
-
-                            <tr>
-                                <td class="active" id="mon3"><b>Brand</b></td>
-                                <td id="mon3">{{appointment.brand}}</td>
-                            </tr>
-
-                            <tr>
-                                <td class="active" id="mon3"><b>Email</b></td>
-                                <td id="mon3">{{appointment.userEmail}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    </div>
-                    <!--<div class="extra content">
-                    <div class="ui two buttons">
-                        <div class="ui basic green button">Approve</div>
-                        <div class="ui basic red button">Decline</div>
-                    </div>
-                    </div>-->
+            <!--<div class="ui items">
+              <div class="item">
+                
+                <div class="ui tiny image">
+                    <img class="image" src = "{{item.imgurl}}">
                 </div>
+                
+                <div class="middle aligned content">
+                   
+                  <a data-tooltip="Cancel Appointment" data-position="bottom center" 
+                  (click)="appointmentAction(item.apid,item.uid,item.spid,item.date,item.time,item.device,'cancel')"><i class="large right floated red trash icon"></i></a>
+                  <a class="header">{{item.username}}</a>
+                  <div class="meta">
+                    <span *ngIf="item.state == 'completed'">
+                        <span style="margin:10px;" class="ui small green tag label" id="mon3">{{item.state}}</span>
+                    </span>
+                    <span style="margin:10px;" class="ui small olive tag label" id="mon3">{{item.time}}</span>
+                    <span style="margin:10px;" class="ui small teal tag label" id="mon3">{{item.date}}</span>
+                    
+                  </div>
+                  <div class="extra">
+                    <button class="ui tiny inverted blue button" [routerLink]="['/User_Requested_Appointment_Detail', item.apid]">
+                      <i class="unordered list icon"></i>
+                      View Appointment Details
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>-->
+        
+            <a><i (click)="appointmentAction(item.apid,item.uid,item.spid,item.date,item.time,item.device,'cancel')" 
+            class="large right floated red trash icon"></i></a>
+
+            <img class="ui right floated tiny image" src = "{{item.imgurl}}">
+            <div class="header">
+              <span *ngIf="item.emergency == 'yes'">
+                <a class="ui red ribbon label" id="mon3">emergency</a>
+              </span>
+              <h3 id="mon3">{{item.username}}</h3>
+              <button class="ui tiny inverted blue button" [routerLink]="['/User_Requested_Appointment_Detail', item.apid]">
+                  <i class="unordered list icon"></i>
+                  View Appointment Details
+              </button>
+            </div>
+            <div class="meta">
+              <span style="margin:10px;" class="ui small olive tag label" id="mon3">{{item.time}}</span>
+              <span style="margin:10px;" class="ui small teal tag label" id="mon3">{{item.date}}</span>
+              <span *ngIf="item.state == 'completed'">
+                <span style="margin:10px;" class="ui small green tag label" id="mon3">{{item.state}}</span>
+              </span>
+            </div>
+
+            <div class="description">
+              <table class="ui small definition unstackable table">
+                <tr>
+                  <td class="active" id="mon3"><b>Phone</b></td>
+                  <td id="mon3">{{item.phone}}</td>
+                </tr>
+
+                <tr>
+                  <td class="active" id="mon3"><b>Address</b></td>
+                  <td id="mon3">{{item.address}}</td>
+                </tr>
+
+                <tr>
+                  <td class="active" id="mon3"><b>Device</b></td>
+                  <td id="mon3">{{item.device}}</td>
+                </tr>
+
+              </table>
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="ui teal small button" id="mon3"><i class="phone icon"></i><a href="tel:{{item.phone}}">Call to cancel</a></div>
+          </div>
         </div>
+        </div>
+      </div>
     </div>
-</div>
-<div *ngIf="appointments.length <= 0">
+  </div>
+  </div>
+
+  <div *ngIf = "appointments.length <= 0">
     <div class="ui centered container">
-        <div class="ui page stackable column grid">
-            <div class="row"></div>
+      <div class="ui page stackable column grid">
+        <div class="row"></div>
             <div class="row"></div>
             <div class="row"></div>
             <div class="row">
@@ -135,9 +164,24 @@
                 </div>
                 </div>
             </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--</div>-->
+
+<div class="ui basic sp-home-cancel-modal modal">
+
+    <div class="ui center aligned grid">
+        <div class="column">
+            <i class="trash huge circle icon"></i>
+            <h4 class="ui inverted center aligned header" id="mon3">Are you sure you want to cancel the appointment?
+            </h4>
         </div>
+
+    </div>
+    <div class="actions">
+        <div class="ui negative approve button" (click)="deleteConfirm(apID, userID, spID, ap_date, ap_time, device, 'cancel')" id="mon3">Okay</div>
+        <div class="ui deny button" id="mon3" (click)="cancelModal()">Cancel</div>
     </div>
 </div>
-<!--</div>-->
-</div>
-<!--</div>-->
